# tito-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: evaluate_agent.py  simple_rollout_demo.py  train_simple_agent.py
tests/: test_tito.py
tito/: __init__.py  buffer.py  chat_template.py  delta.py  masking.py  rollout.py  trainer.py
