[project]
name = "tito-rl"
version = "0.1.0"
description = "Token-In Token-Out (TITO) RL Training Framework for tool-using LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.41.0",
    "torch>=2.4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pytest>=8.0", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
